apps/debug/webtop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtop
  namespace: webtop
  labels:
    app: webtop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webtop
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webtop
    spec:
      containers:
        - name: webtop
          image: lscr.io/linuxserver/webtop:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: 1024Mi
              cpu: 500m
            limits:
              memory: 1024Mi
              cpu: 500m
      restartPolicy: Always
      automountServiceAccountToken: false
