apps/debug/webtop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: webtop
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: webtop
  type: ClusterIP
